# basic_autogen

./: README.md  pyproject.toml
src/autogen/: code_executor_example.py  code_improvement_recommendation.py  data_visualization.py  group_chat.py  topic_discussion.py
uml/: data_visualization_sequence.puml
