[tool.poetry]
name = "basic-autogen"
version = "0.1.0"
description = ""
authors = ["jeonhyeongjun <skidrow6122@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pyautogen = "^0.9"
langchain-openai = "^0.3.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
