[tool.poetry]
name = "basic-autogen"
version = "0.1.0"
description = ""
authors = ["jeonhyeongjun <skidrow6122@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
ag2 = "^0.9"
langchain-openai = "^0.3.23"
matplotlib = "^3.10.3"
pandas = "^2.3.0"
seaborn = "^0.13.2"
ipython = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
